--- a/public/Contact/index.html
+++ b/public/Contact/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/Assets/images/Example.jpeg">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Contact - OA Code Club</title>
     <link rel="stylesheet" href="/Assets/css/navbar.css">
+    <link rel="stylesheet" href="/Assets/css/main.css">
 </head>
 
 <body>
     <div>
-        <div class="topnav">
+        <nav class="topnav">
             <a class="container left" href="/">
                 <h1 class="text">Home</h1>
             </a>
@@ -28,11 +29,11 @@
                 <h1 class="text">About Us</h1>
             </a>
             <a class="img" href="/">
-                <h1 class="text">OA Code</h1>
+                <img src="/Assets/images/Example.jpeg" class="image">
             </a>
-        </div>
+        </nav>
     </div>
-    <h1>Contact</h1>
+    <h1 id="Title">Contact</h1>
 </body>
 
 </html>
