--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Home - OA Code Club</title>
     <link rel="stylesheet" href="/Assets/css/navbar.css">
     <link rel="stylesheet" href="/Assets/css/main.css">
+    <link rel="stylesheet" href="/Assets/css/home.css">
 </head>
 
 <body>
@@ -33,7 +34,10 @@
             </a>
         </nav>
     </div>
-    <h1 id="Title">Home</h1>
+
+    <div id="HomeMain">
+        <h1 id="Title" moveandexpand data-animate>Welcome to OA Code</h1>
+    </div>
 </body>
 
 </html>
