--- a/public/Calendar/index.html
+++ b/public/Calendar/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="/Assets/images/Example.jpeg">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Calendar - OA Code Club</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/Assets/css/navbar.css">
     <link rel="stylesheet" href="/Assets/css/main.css">
 </head>
@@ -13,20 +16,23 @@
 <body>
     <div>
         <nav class="topnav">
-            <a class="container left" href="/">
-                <h1 class="text">Home</h1>
+            <a class="item left" href="/">
+                <h3 class="text">Home</h3>
             </a>
-            <a class="container" href="/Calendar">
-                <h1 class="text">Calendar</h1>
+            <a class="item" href="/Calendar">
+                <h3 class="text">Calendar</h3>
             </a>
-            <a class="container" href="/Contact">
-                <h1 class="text">Contact</h1>
+            <a class="item" href="/Contact">
+                <h3 class="text">Contact</h3>
             </a>
-            <a class="container" href="/Signup">
-                <h1 class="text">Sign Up</h1>
+            <a class="item" href="/Signup">
+                <h3 class="text">Sign Up</h3>
             </a>
-            <a class="container right" href="/About">
-                <h1 class="text">About Us</h1>
+            <a class="item" href="/Board">
+                <h3 class="text">Our Board</h3>
+            </a>
+            <a class="item right" href="/About">
+                <h3 class="text">About Us</h3>
             </a>
             <a class="img" href="/">
                 <img src="/Assets/images/Example.jpeg" class="image">
