--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!-- Font Awesome -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-rXcOcZAkyDvJXVoiHJMF+LWmO7/b00TLzcK2F5C0sw4p0urHJkMjLl/ky1c1Y+MQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-rXcOcZAkyDvJXVoiHJMF+LWmO7/b00TLzcK2F5C0sw4p0urHJkMjLl/ky1c1Y+MQ" crossorigin="anonymous">
 
-<!-- MDB -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.9.0/mdb.min.css" integrity="sha512-0fFyNtL8Qg6phTjySvI3Mc9uW+R7M6F1nuZrldX+hnzZl1r5rymGP7brXqC3/yyKsIIMXM+2fOgQGXOZgPzKjg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.9.0/mdb.min.js" integrity="sha512-KhmrxUwmlrouP4BS1LCGhWh3yUOGJiJd2A2kq0HNZilM9n+l9VRbsGGLHVz0g6pPQ6z7rPJgzYpLVzYIKTtEoA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- MDB -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.9.0/mdb.min.css"
+        integrity="sha512-0fFyNtL8Qg6phTjySvI3Mc9uW+R7M6F1nuZrldX+hnzZl1r5rymGP7brXqC3/yyKsIIMXM+2fOgQGXOZgPzKjg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.9.0/mdb.min.js"
+        integrity="sha512-KhmrxUwmlrouP4BS1LCGhWh3yUOGJiJd2A2kq0HNZilM9n+l9VRbsGGLHVz0g6pPQ6z7rPJgzYpLVzYIKTtEoA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="/Assets/css/navbar.css">
@@ -25,6 +30,7 @@
     <link rel="stylesheet" href="/Assets/css/home.css">
     <link rel="stylesheet" href="/Assets/css/board.css">
     <link rel="stylesheet" href="/Assets/css/about.css">
+    <link rel="stylesheet" href="/Assets/css/contact.css">
 
     <!-- JS Files -->
     <script src="/Assets/js/about.js"></script>
@@ -60,7 +66,8 @@
     <div id="HomeMain">
         <h1 id="Title" data-animate style="animation-delay:0.1s;">Welcome to OA Code</h1>
         <br><br>
-        <h3 id="Sub-Title" data-animate style="animation-delay:0.1s;">We contribute to widespread coding recognition</h3>
+        <h3 id="Sub-Title" data-animate style="animation-delay:0.1s;">We contribute to widespread coding recognition.<br><br>Meetings every Friday!
+        </h3>
     </div>
 
     <br>
@@ -71,11 +78,19 @@
     </div>
     <br>
     <div id="Text2">
-        <h1 data-mdb-toggle="animation" data-mdb-animation="slide-in-left">Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 </h1>
+        <h1 data-mdb-toggle="animation" data-mdb-animation="slide-in-left">Example 2 Example 2 Example 2 Example 2
+            Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example
+            2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2
+            Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example
+            2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 Example 2 </h1>
     </div>
     <br>
     <div id="Text3">
-        <h1 data-mdb-toggle="animation" data-mdb-animation="slide-in-left">Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 </h1>
+        <h1 data-mdb-toggle="animation" data-mdb-animation="slide-in-left">Example 3 Example 3 Example 3 Example 3
+            Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example
+            3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3
+            Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example
+            3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 Example 3 </h1>
     </div>
     <div id="Board">
         <h1 id="BoardTitle">Our Board</h1>
@@ -189,12 +204,49 @@
             </div>
         </div>
     </div>
+    <div id="Calendar">
+        <h1 id="CalendarTitle">Calendar</h1>
+        <div id="CalendarContainer">
+            <iframe src="https://calendar.google.com/calendar/embed?src=csclub%40stevens.edu&ctz=America%2FNew_York"
+                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+    <br><br>
+    <div id="Signup">
+        <h1 id="SignUpLabel">Sign Up</h1>
+        <div>
+            <form>
+                <input type="text" id="fname" name="fname" placeholder="First Name">
+                <input type="text" id="lname" name="lname" placeholder="Last Name">
+                <input type="text" id="email" name="email" placeholder="Email">
+                <input type="number" id="studentid" name="studentid" placeholder="Student ID">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </div>
+    <br><br>
+    <div id="Contact">
+        <h1 id="ContactLabel">
+            Message Us!
+        </h1>
+        <h2 id="ContactUsSublabel">
+            Send us a message or check out our socials!
+        </h2>
+        <input type="text" id="fname" name="fname" placeholder="Your Name">
+        <input type="text" id="email" name="email" placeholder="Your Email">
+        <br>
+        <input type="text" id="subject" name="subject" placeholder="Your Subject">
+        <br>
+        <input type="text" id="message" name="message" placeholder="Your Message">
+        <br>
+        <input type="submit" value="Submit">
+    </div>
     <footer>
         <h4>
             Developed by Erick Tran for OA Code
         </h4>
         <h4>
-            Beta Version 0.0.05
+            Beta Version 0.0.1
         </h4>
     </footer>
 </body>
