--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="/Assets/css/board.css">
     <link rel="stylesheet" href="/Assets/css/about.css">
     <link rel="stylesheet" href="/Assets/css/contact.css">
+    <link rel="stylesheet" href="/Assets/css/calendar.css"
 
     <!-- JS Files -->
     <script src="/Assets/js/about.js"></script>
@@ -217,7 +218,7 @@
         </div>
     </div>
     <div id="Calendar">
-        <h1 id="CalendarTitle">Calendar</h1>
+        <h1 id="CalendarLabel">Calendar</h1>
         <div id="CalendarContainer">
             <iframe src="https://calendar.google.com/calendar/embed?src=csclub%40stevens.edu&ctz=America%2FNew_York"
                 style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
