--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,13 @@
     <link rel="stylesheet" href="/Assets/css/board.css">
     <link rel="stylesheet" href="/Assets/css/about.css">
     <link rel="stylesheet" href="/Assets/css/contact.css">
-    <link rel="stylesheet" href="/Assets/css/calendar.css"
-
-    <!-- JS Files -->
+    <link rel="stylesheet" href="/Assets/css/calendar.css" <!-- JS Files -->
     <script src="/Assets/js/about.js"></script>
 </head>
 
 <body>
     <div id="navbar">
-        <nav class="topnav">
+        <nav class="desktoptopnav" id="ComputerVisible">
             <button class="item left" onclick="document.getElementById('Contact').scrollIntoView();">
                 <h3 class="text">Contact</h3>
             </button>
@@ -52,7 +50,7 @@
             <button class="item" onclick="document.getElementById('Board').scrollIntoView();">
                 <h3 class="text">Our Board</h3>
             </button>
-            <button class="item" onclick="document.getElementById('About').scrollIntoView();" >
+            <button class="item" onclick="document.getElementById('About').scrollIntoView();">
                 <h3 class="text">About Us</h3>
             </button>
             <button class="item right" onclick="document.getElementById('Home').scrollIntoView();">
@@ -61,6 +59,29 @@
             <button class="img" onclick="document.getElementById('Home').scrollIntoView();">
                 <img src="/Assets/images/Example.jpeg" class="image">
             </button>
+        </nav>
+        <nav class="mobiletopnav" id="MobileVisible">
+            <img src="/Assets/images/HamburgerSelectionIcon.png" class="hamburger" onclick="openNav()">
+            <ul>
+                <button onclick="document.getElementById('Contact').scrollIntoView();">
+                    <h3 class="text">Contact</h3>
+                </button>
+                <button onclick="document.getElementById('Signup').scrollIntoView();">
+                    <h3 class="text">Sign Up</h3>
+                </button>
+                <button onclick="document.getElementById('Calendar').scrollIntoView();">
+                    <h3 class="text">Calendar</h3>
+                </button>
+                <button onclick="document.getElementById('Board').scrollIntoView();">
+                    <h3 class="text">Our Board</h3>
+                </button>
+                <button onclick="document.getElementById('About').scrollIntoView();">
+                    <h3 class="text">About Us</h3>
+                </button>
+                <button onclick="document.getElementById('Home').scrollIntoView();">
+                    <h3 class="text">Home</h3>
+                </button>
+            </ul>
         </nav>
     </div>
 
@@ -220,8 +241,8 @@
     <div id="Calendar">
         <h1 id="CalendarLabel">Calendar</h1>
         <div id="CalendarContainer">
-            <iframe src="https://calendar.google.com/calendar/embed?src=csclub%40stevens.edu&ctz=America%2FNew_York"
-                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe id="CalendarListing" src="https://calendar.google.com/calendar/embed?src=csclub%40stevens.edu&ctz=America%2FNew_York"
+                style="border: 0" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
     <br><br>
