--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <button class="item" onclick="document.getElementById('About').scrollIntoView();">
                 <h3 class="text">About Us</h3>
             </button>
-            <button class="item right" onclick="document.getElementById('Home').scrollIntoView();">
+            <button class="item right active" onclick="document.getElementById('Home').scrollIntoView();">
                 <h3 class="text">Home</h3>
             </button>
             <button class="img" onclick="document.getElementById('Home').scrollIntoView();">
