--- a/public/index.html
+++ b/public/index.html
@@ -61,27 +61,26 @@
 
             <div id="MobileVisibleUl" class="dropdown-content">
                 <br>
-                <button class="item" style="animation: growDown 300ms ease-in-out forwards"
-                    onclick="document.getElementById('Home').scrollIntoView();">
+                <button class="item" style="animation-delay:0.3s" onclick="document.getElementById('Home').scrollIntoView();">
                     <h3 class="text">Home</h3>
                 </button>
-                <button class="item" style="animation: growDown 500ms ease-in-out forwards"
+                <button class="item" style="animation-delay:0.4s"
                     onclick="document.getElementById('About').scrollIntoView();">
                     <h3 class="text">About Us</h3>
                 </button>
-                <button class="item" style="animation: growDown 700ms ease-in-out forwards"
+                <button class="item" style="animation-delay:0.5s"
                     onclick="document.getElementById('Board').scrollIntoView();">
                     <h3 class="text">Our Board</h3>
                 </button>
-                <button class="item" style="animation: growDown 900ms ease-in-out forwards"
+                <button class="item" style="animation-delay:0.6s"
                     onclick="document.getElementById('Calendar').scrollIntoView();">
                     <h3 class="text">Calendar</h3>
                 </button>
-                <button class="item" style="animation: growDown 1100ms ease-in-out forwards"
+                <button class="item" style="animation-delay:0.7s"
                     onclick="document.getElementById('Signup').scrollIntoView();">
                     <h3 class="text">Sign Up</h3>
                 </button>
-                <button class="item" style="animation: growDown 1300ms ease-in-out forwards"
+                <button class="item" style="animation-delay:0.8s"
                     onclick="document.getElementById('Contact').scrollIntoView();">
                     <h3 class="text">Contact</h3>
                 </button>
@@ -160,7 +159,7 @@
                             <h1>Placeholder A.</h1>
                         </div>
                         <p class="card-text" id="Position">President</p>
-                        <p class="card-text" id="Class">Class of 2020</p>
+                        <p class="card-text" id="Class">Oxford - Class of 2020</p>
                         <div class="Socials">
                             <a href="..">
                                 <h1>Email</h1>
@@ -182,7 +181,7 @@
                             <h1>Placeholder B.</h1>
                         </div>
                         <p class="card-text" id="Position">Vice President</p>
-                        <p class="card-text" id="Class">Class of 2021</p>
+                        <p class="card-text" id="Class">Oxford - Class of 2021</p>
                         <div class="Socials">
                             <a href="..">
                                 <h1>Email</h1>
@@ -204,7 +203,7 @@
                             <h1>Placeholder C.</h1>
                         </div>
                         <p class="card-text" id="Position">Event Coordinator</p>
-                        <p class="card-text" id="Class">Class of 2025</p>
+                        <p class="card-text" id="Class">Oxford - Class of 2025</p>
                         <div class="Socials">
                             <a href="..">
                                 <h1>Email</h1>
@@ -226,7 +225,7 @@
                             <h1>Placeholder D.</h1>
                         </div>
                         <p class="card-text" id="Position">Lead Programmer</p>
-                        <p class="card-text" id="Class">Class of 2024</p>
+                        <p class="card-text" id="Class">Oxford - Class of 2024</p>
                         <div class="Socials">
                             <a href="..">
                                 <h1>Email</h1>
