--- a/public/index.html
+++ b/public/index.html
@@ -46,22 +46,22 @@
             <button class="item right active" onclick="document.getElementById('Home').scrollIntoView();">
                 <h3 class="text">Home</h3>
             </button>
-            <button class="img" onmousedown="document.getElementById('Home').scrollIntoView();">
+            <button class="img" onmousedown="document.getElementById('Home').scrollIntoView();" id="LeftImg">
                 <img src="/Assets/images/Example.jpeg" class="image">
+                <h1 id="ImgTitle">OA Code Club</h1>
             </button>
         </nav>
 
         <nav class="mobiletopnav" id="MobileVisible">
             <img src="/Assets/images/Example.jpeg" class="image" id="ImageMobile" onclick="window.location='/'">
 
-            <img src="/Assets/images/HamburgerSelectionIcon.png" class="hamburger dropbtn" id="BtnDropdown1"
-                onclick="dropDown()">
-
-            <br><br>
-
+            <img src="/Assets/images/HamburgerSelectionIcon.png" class="hamburger dropbtn" id="BtnDropdown1" onclick="dropDown()">
+            <h5 id="TopNavTitle">OA Code Club</h5>
+        
             <div id="MobileVisibleUl" class="dropdown-content">
                 <br>
-                <button class="item" style="animation-delay:0.3s" onclick="document.getElementById('Home').scrollIntoView();">
+                <button class="item" style="animation-delay:0.3s"
+                    onclick="document.getElementById('Home').scrollIntoView();">
                     <h3 class="text">Home</h3>
                 </button>
                 <button class="item" style="animation-delay:0.4s"
@@ -104,6 +104,7 @@
             <div id="Text1">
                 <h1 class="revealfor" data-mdb-toggle="animation" data-mdb-animation="slide-in-left">Example1</h1>
             </div>
+            <img src="/Assets/images/background-temp.jpg">
         </div>
         <div class="ContentFiller">
             <img src="/Assets/images/background-temp.gif">
@@ -135,6 +136,7 @@
                     3
                 </h1>
             </div>
+            <img src="/Assets/images/background-temp.jpg">
         </div>
     </div>
 
@@ -293,7 +295,7 @@
             Developed by Erick Tran for OA Code
         </h4>
         <h4>
-            Beta Version 0.5.0
+            Beta Version 0.7.5
         </h4>
     </footer>
 </body>
