--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
             <div id="MobileVisibleUl" class="dropdown-content">
                 <br>
-                <button class="item" style="animation-delay:0.3s"
+                <button class="item left" style="animation-delay:0.3s"
                     onclick="document.getElementById('Home').scrollIntoView();">
                     <h3 class="text">Home</h3>
                 </button>
@@ -78,7 +78,7 @@
                     onclick="document.getElementById('Signup').scrollIntoView();">
                     <h3 class="text">Sign Up</h3>
                 </button>
-                <button class="item" style="animation-delay:0.8s"
+                <button class="item right" style="animation-delay:0.8s"
                     onclick="document.getElementById('Contact').scrollIntoView();">
                     <h3 class="text">Contact</h3>
                 </button>
