--- a/public/index.html
+++ b/public/index.html
@@ -245,8 +245,10 @@
         <div>
             <input type="text" id="fname" name="fname" placeholder="First Name" id="FirstNameSign">
             <input type="text" id="lname" name="lname" placeholder="Last Name" id="LastNameSign">
+            <br><br>
             <input type="text" id="email" name="email" placeholder="Your Email" id="EmailSign">
             <input type="number" id="studentid" name="studentid" placeholder="Student ID" id="studentIDSign">
+            <br>
             <input type="submit" value="Submit" id="SignUpSubmit" onclick="submitSignUp()">
         </div>
     </div>
@@ -260,6 +262,7 @@
         </h2>
         <input type="text" id="fname" name="fname" placeholder="Your Name" id="FirstNameContact">
         <input type="text" id="lname" name="lname" placeholder="Last Name" id="LastNameContact">
+        <br>
         <input type="text" id="email" name="email" placeholder="Your Email" id="EmailContact">
         <br>
         <input type="text" id="subject" name="subject" placeholder="Your Subject" id="SubjectContact">
@@ -268,13 +271,9 @@
         <br>
         <input type="submit" value="Submit" class="ContactSubmit" onclick="submitContact()">
     </div>
-    <footer id="Footer"
-        style="background-image: url(/Assets/images/background-temp.gif); background-size: cover; color:white;">
-        <h4>
-            Developed by Erick Tran for OA Code
-        </h4>
-        <h4>
-            Beta Version 0.7.5
+    <footer id="Footer">
+        <h4 id="FooterText">
+            Developed by Erick Tran for OA Code<br>Last Updated on 5-9-2023 at 1:43 PM<br>Beta Version 0.8
         </h4>
     </footer>
 </body>
