--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
 
     <br><br>
     <div id="Board">
-        <h1 id="BoardTitle">Our Board</h1>
+        <p id="BoardTitle">Our Board</p>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
@@ -232,7 +232,7 @@
         </div>
     </div>
     <div id="Calendar">
-        <h1 id="CalendarLabel">Calendar</h1>
+        <p id="CalendarLabel">Calendar</p>
         <div id="CalendarContainer">
             <iframe id="CalendarListing"
                 src="https://calendar.google.com/calendar/embed?src=csclub%40stevens.edu&ctz=America%2FNew_York"
@@ -241,7 +241,7 @@
     </div>
     <br><br>
     <div id="Signup">
-        <h1 id="SignUpLabel">Sign Up</h1>
+        <p id="SignUpLabel">Sign Up</p>
         <div>
             <input type="text" id="fname" name="fname" placeholder="First Name" id="FirstNameSign">
             <input type="text" id="lname" name="lname" placeholder="Last Name" id="LastNameSign">
@@ -254,9 +254,7 @@
     </div>
     <br><br>
     <div id="Contact">
-        <h1 id="ContactLabel">
-            Message Us!
-        </h1>
+        <p id="ContactLabel">Message Us!</p>
         <h2 id="ContactUsSublabel">
             Send us a message or check out our socials!
         </h2>
@@ -271,6 +269,7 @@
         <br>
         <input type="submit" value="Submit" class="ContactSubmit" onclick="submitContact()">
     </div>
+    <br><br>
     <footer id="Footer">
         <h4 id="FooterText">
             Developed by Erick Tran for OA Code<br>Last Updated on 5-9-2023 at 1:43 PM<br>Beta Version 0.8
