--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/Assets/css/desktop-homepage.css">
-    <link rel="stylesheet" href="/Assets/css/mobile-homepage.css">
+    <link rel="stylesheet" type="text/css" href="/Assets/css/desktop-homepage.css">
+    <link rel="stylesheet" type="text/css" href="/Assets/css/mobile-homepage.css">
     
     <!-- JS Files -->
     <script src="/Assets/js/homepage.js"></script>
@@ -272,7 +272,7 @@
     <br><br>
     <footer id="Footer">
         <h4 id="FooterText">
-            Developed by Erick Tran for OA Code<br>Last Updated on 5-9-2023 at 1:43 PM<br>Beta Version 0.8
+            Developed by Erick Tran for OA Code<br>Last Updated on 6-18-2023 at 12:22 AM<br>Beta Version 0.81
         </h4>
     </footer>
 </body>
